# agentguard

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentguard/: __init__.py  tools.py
agentguard/adapters/: __init__.py  crewai.py  langgraph.py  openai.py
agentguard/core/: __init__.py  base_shield.py  exceptions.py  guard.py  session.py
agentguard/models/: __init__.py  loader.py
agentguard/notifiers/: __init__.py  base.py  cli.py  slack.py  webhook.py
agentguard/shields/: __init__.py  audit_logger.py  cost_limit.py  human_gate.py  pii_redactor.py  prompt_shield.py  rate_limit.py  tool_validator.py
examples/: human_gate_example.py  langgraph_example.py  openai_example.py
tests/benchmarks/: bench_shields.py
tests/unit/: test_cost_limit.py  test_guard.py  test_pii_redactor.py  test_prompt_shield.py  test_rate_limit.py  test_tool_validator.py
training/: train_injection_classifier.py
