[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "Helmet.js for AI Agents — Lightweight security middleware for production AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Chirag Krishna", email = "chiragkrishna1732@gmail.com" }]
keywords = ["ai", "agents", "security", "guardrails", "llm", "prompt-injection", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core deps kept minimal — zero-friction install
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
ml = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.0.0",
    "accelerate>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = ["agentguard[presidio,ml,dev]"]

[project.urls]
Homepage = "https://github.com/chiragkrishna07/agentguard"
Documentation = "https://agentguard.readthedocs.io"
Repository = "https://github.com/chiragkrishna07/agentguard"
Issues = "https://github.com/chiragkrishna07/agentguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
